syntax = "proto3";

package acs1;

import "aelf_options.proto";
import "google/protobuf/empty.proto";

option (aelf.identity) = "acs1";

service FeeChargedContract {
    // Actions
    rpc SetMethodFee (SetMethodFeeInput) returns (google.protobuf.Empty) {
    }
    // Views
    rpc GetMethodFee (MethodName) returns (TokenAmount) {
        option (aelf.is_view) = true;
    }

}

message MethodName {
    string name = 1;
}

message TokenAmount {
    string base_symbol = 1;
    sint64 base_amount = 2;
    repeated string available_symbols = 3;
}

message SetMethodFeeInput {
    string method = 1;
    string base_symbol = 2;
    sint64 base_amount = 3;
    repeated string available_symbols = 4;
}

// Events
message MethodFeeSet {
    option (aelf.is_event) = true;
    string method = 1;
    string base_symbol = 2;
    string available_symbols = 3;
    sint64 oldFee = 4;
    sint64 newFee = 5;
}
